# cli-buka

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_copy_plugins.ps1  build_and_copy_plugins.sh
buka/: Cargo.toml
buka/src/: main.rs
plugins/hello/: Cargo.toml
plugins/hello/src/: lib.rs
plugins/system/src/: lib.rs
rust/: Cargo.toml  LICENSE  build_and_copy_plugins.ps1
rust/buka/: Cargo.toml
rust/buka/src/: main.rs
rust/plugins/echo/: Cargo.toml
rust/plugins/echo/src/: lib.rs
rust/plugins/hello/: Cargo.toml
rust/plugins/hello/src/: lib.rs
rust/plugins/plugin/: Cargo.toml
rust/plugins/plugin/src/: lib.rs
rust/plugins/system/: Cargo.toml
rust/plugins/system/src/: lib.rs
