[workspace]
resolver = "3"
members = [
    "buka",
    "plugins/hello",
    "plugins/system",
    "plugins/echo",
    "plugins/plugin",
]

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.9.0"
